k8sFiles/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: outlay-breakbrokebroken-ingress
spec:
  rules:
    - http:
        paths:     
          - pathType: Exact
            path: /api/service
            backend:
              service:
                name: outlay-notbroken-service
                port:
                  number: 8080

          - pathType: Exact
            path: /api/break
            backend:
              service:
                name: outlay-notbroken-service
                port:
                  number: 8080                  

          - pathType: Exact
            path: /api/test
            backend:
              service:
                name: outlay-user-service
                port:
                  number: 8080
