k8sFiles/rule-destionation.yml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: service-destination
spec:
  host: outlay-notbroken-service
  trafficPolicy:
    outlierDetection:
      consecutive5xxErrors: 2 
      interval: 10s
      baseEjectionTime: 30s
      maxEjectionPercent: 80
