k8sFiles/virtual-service.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: service-virtual
spec:
  hosts:
    - outlay-notbroken-service
  http:
    - route:
        - destination:
            host: outlay-notbroken-service
      timeout: 5s
      retries:
        attempts: 3
        retryOn: 5xx
        perTryTimeout: 2s
